# iris-fisher

./: Makefile  README.md  pyproject.toml
iris_fisher/: __init__.py  dataset.py  features.py  plots.py
iris_fisher/api/: main.py
iris_fisher/api/routers/: iris_router.py
iris_fisher/api/schemas/: iris.py
iris_fisher/modeling/: predict.py  train.py
models/: dec_tree.pkl  gbc.pkl  knn.pkl  lin_disc.pkl  log_reg.pkl  mlp.pkl  model.pkl  reg.pkl  rfc.pkl  svm.pkl
notebooks/: eda.ipynb  preprocessing.ipynb  training.ipynb
