[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "iris_fisher"
version = "0.0.1"
description = "Analysis \u0026 ML on the Fisher Iris Dataset"
authors = [
  { name = "Caleb Hadley" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
dependencies = [
    "fastapi[standard]",
    "loguru",
    "pandas",
    "pydantic",
    "pip",
    "python-dotenv",
    "ruff",
    "scikit-learn",
    "tqdm",
    "typer",
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["iris_fisher"]
include = ["pyproject.toml", "iris_fisher/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["iris_fisher"]
force-sort-within-sections = true

